Changes to bulk invite text

--- a/app/views/v2-2-0-supplier/schools/results.html
+++ b/app/views/v2-2-0-supplier/schools/results.html
@@ -25,8 +25,8 @@
     </div>
     <div class="govuk-grid-column-one-third">
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-      <h4 class="govuk-heading-s">Bulk invites</h4>
-      <p>Create an invite list from the search results</p>
+      <h4 class="govuk-heading-s">Create bulk invite</h4>
+      <p>Create an invite list from the search and filter results shown on this page</p>
       {{ govukButton({text: "Create invite list", href: "./refine_list"}) }}
 
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
